--- a/WebHunt/WebHunt/Resources/Preferences.storyboard
+++ b/WebHunt/WebHunt/Resources/Preferences.storyboard
@@ -8,7 +8,7 @@
         <!--Window Controller-->
         <scene sceneID="RsZ-Be-u9d">
             <objects>
-                <windowController id="dKY-bt-q1o" customClass="PreferencesWindowController" customModule="WebHunt" customModuleProvider="target" sceneMemberID="viewController">
+                <windowController storyboardIdentifier="PreferencesWindowController" id="dKY-bt-q1o" customClass="PreferencesWindowController" customModule="WebHunt" customModuleProvider="target" propertyAccessControl="none" sceneMemberID="viewController">
                     <window key="window" identifier="PreferencesWindow" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="CdF-jx-5jU" userLabel="PreferencesWindow" customClass="PreferencesWindow" customModule="WebHunt" customModuleProvider="target">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -36,7 +36,7 @@
                 </viewController>
                 <customObject id="BQy-9y-HJM" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="777"/>
+            <point key="canvasLocation" x="139" y="528"/>
         </scene>
     </scenes>
 </document>
